--- a/package.json
+++ b/package.json
@@ -5,9 +5,16 @@
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo run:android",
-    "ios": "expo run:ios",
+    "inject-env": "node ./scripts/inject-env.js",
+    "android": "npm run inject-env && expo run:android",
+    "ios": "npm run inject-env && expo run:ios",
     "web": "expo start --web",
+    "android:dev": "npm run inject-env && expo run:android --variant=devDebug",
+    "android:local": "npm run inject-env && expo run:android --variant=localDebug",
+    "android:prod": "npm run inject-env && expo run:android --variant=prodDebug",
+    "ios:dev": "npm run inject-env && expo run:ios --scheme dev",
+    "ios:local": "npm run inject-env && expo run:ios --scheme local",
+    "ios:prod": "npm run inject-env && expo run:ios --scheme prod",
     "test": "jest --watchAll",
     "lint": "expo lint"
   },
@@ -16,6 +23,7 @@
     "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
+    "@revopush/react-native-code-push": "^1.2.0",
     "date-fns": "^4.1.0",
     "expo": "~52.0.43",
     "expo-blur": "~14.0.3",
@@ -34,6 +42,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.9",
+    "react-native-config": "^1.5.5",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-mmkv": "^3.2.0",
     "react-native-reanimated": "~3.16.1",
