feat: 프로젝트 설정 파일 업데이트 - 코드 서명 및 번들 식별자 수정, 스킴 참조 경로 정정

--- a/ios/coinpurse.xcodeproj/xcshareddata/xcschemes/dev.xcscheme
+++ b/ios/coinpurse.xcodeproj/xcshareddata/xcschemes/dev.xcscheme
@@ -18,7 +18,7 @@
                      BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
                      BuildableName = "coinpurse.app"
                      BlueprintName = "coinpurse"
-                     ReferencedContainer = "container:&#x110b;&#x1175;.xcodeproj">
+                     ReferencedContainer = "container:coinpurse.xcodeproj">
                   </BuildableReference>
                </EnvironmentBuildable>
             </ActionContent>
@@ -36,7 +36,7 @@
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
                BuildableName = "coinpurse.app"
                BlueprintName = "coinpurse"
-               ReferencedContainer = "container:&#x110b;&#x1175;.xcodeproj">
+               ReferencedContainer = "container:coinpurse.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -65,7 +65,7 @@
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
             BuildableName = "coinpurse.app"
             BlueprintName = "coinpurse"
-            ReferencedContainer = "container:&#x110b;&#x1175;.xcodeproj">
+            ReferencedContainer = "container:coinpurse.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -82,7 +82,7 @@
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
             BuildableName = "coinpurse.app"
             BlueprintName = "coinpurse"
-            ReferencedContainer = "container:&#x110b;&#x1175;.xcodeproj">
+            ReferencedContainer = "container:coinpurse.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
