--- a/ios/coinpurse.xcodeproj/xcshareddata/xcschemes/coinpurse.xcscheme
+++ b/ios/coinpurse.xcodeproj/xcshareddata/xcschemes/coinpurse.xcscheme
@@ -17,7 +17,7 @@
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
                BuildableName = "coinpurse.app"
                BlueprintName = "coinpurse"
-               ReferencedContainer = "container:&#x110b;&#x1175;.xcodeproj">
+               ReferencedContainer = "container:coinpurse.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -35,7 +35,7 @@
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
                BuildableName = "coinpurseTests.xctest"
                BlueprintName = "coinpurseTests"
-               ReferencedContainer = "container:&#x110b;&#x1175;.xcodeproj">
+               ReferencedContainer = "container:coinpurse.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -57,7 +57,7 @@
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
             BuildableName = "coinpurse.app"
             BlueprintName = "coinpurse"
-            ReferencedContainer = "container:&#x110b;&#x1175;.xcodeproj">
+            ReferencedContainer = "container:coinpurse.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -74,7 +74,7 @@
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
             BuildableName = "coinpurse.app"
             BlueprintName = "coinpurse"
-            ReferencedContainer = "container:&#x110b;&#x1175;.xcodeproj">
+            ReferencedContainer = "container:coinpurse.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
