--- a/ios/coinpurse.xcodeproj/xcshareddata/xcschemes/prod.xcscheme
+++ b/ios/coinpurse.xcodeproj/xcshareddata/xcschemes/prod.xcscheme
@@ -11,7 +11,7 @@
             ActionType = "Xcode.IDEStandardExecutionActionsCore.ExecutionActionType.ShellScriptAction">
             <ActionContent
                title = "Run Script"
-               scriptText = "# Type a script or drag a script file from your workspace to insert its path.&#10;cp &quot;${PROJECT_DIR}/../.env.prod&quot; &quot;${PROJECT_DIR}/../.env&quot;&#10;&#10;&quot;${SRCROOT}/../node_modules/react-native-config/ios/ReactNativeConfig/BuildXCConfig.rb&quot; &quot;${SRCROOT}/..&quot; &quot;${SRCROOT}/tmp.xcconfig&quot;&#10;">
+               scriptText = "# Type a script or drag a script file from your workspace to insert its path.&#10;cp &quot;${PROJECT_DIR}/../.env.prod&quot; &quot;${PROJECT_DIR}/../.env&quot;&#10;&#10;&quot;${SRCROOT}/../node_modules/react-native-config/ios/ReactNativeConfig/BuildXCConfig.rb&quot; &quot;${SRCROOT}/..&quot; &quot;${SRCROOT}/tmp.xcconfig&quot;&#10;&#10;CONFIG_PATH=&quot;${SRCROOT}/Config/Config.xcconfig&quot;&#10;&#10;if [ ! -f &quot;$CONFIG_PATH&quot; ]; then&#10;  echo &apos;#include? &quot;tmp.xcconfig&quot;&apos; &gt; &quot;$CONFIG_PATH&quot;&#10;  echo &quot;&#x2705; Config.xcconfig &#xc790;&#xb3d9; &#xc0dd;&#xc131;&#xb428;&quot;&#10;elif ! grep -q &apos;tmp.xcconfig&apos; &quot;$CONFIG_PATH&quot;; then&#10;  echo &apos;#include? &quot;tmp.xcconfig&quot;&apos; &gt;&gt; &quot;$CONFIG_PATH&quot;&#10;  echo &quot;&#x26a0;&#xfe0f; Config.xcconfig&#xc5d0; tmp.xcconfig&#xac00; &#xb204;&#xb77d;&#xb418;&#xc5b4; &#xc788;&#xc5b4; &#xcd94;&#xac00;&#xd568;&quot;&#10;fi&#10;">
                <EnvironmentBuildable>
                   <BuildableReference
                      BuildableIdentifier = "primary"
@@ -49,7 +49,7 @@
       shouldAutocreateTestPlan = "YES">
    </TestAction>
    <LaunchAction
-      buildConfiguration = "Release"
+      buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "0"
