--- a/package.json
+++ b/package.json
@@ -59,6 +59,8 @@
     "@babel/core": "^7.25.2",
     "@babel/preset-env": "^7.26.9",
     "@babel/preset-typescript": "^7.27.0",
+    "@react-native-community/cli": "^18.0.0",
+    "@react-native/metro-config": "^0.80.1",
     "@testing-library/jest-native": "^5.4.3",
     "@testing-library/react-native": "^13.2.0",
     "@types/jest": "^29.5.14",
