feat: 앱 설정 파일 업데이트 - EAS 및 CodePush 관련 설정 추가, metro.config.js에서 Expo 및 React Native 설정 병합, 패키지 의존성 추가

--- a/app.json
+++ b/app.json
@@ -36,6 +36,13 @@
         "projectId": "ae3c101c-3efe-4214-80a7-26b36db9b8c0"
       }
     },
-    "owner": "taewookkwak"
+    "owner": "taewookkwak",
+    "runtimeVersion": "1.0.0",
+    "updates": {
+      "url": "https://u.expo.dev/ae3c101c-3efe-4214-80a7-26b36db9b8c0",
+      "requestHeaders": {
+        "expo-channel-name": "dev"
+      }
+    }
   }
 }
