feat: package.json에 EAS 및 CodePush 관련 스크립트 추가, RootLayout에서 CodePush 제거 및 Expo Updates로 업데이트 체크 기능 구현, HomeScreen에서 불필요한 로그 및 상태 출력 제거, WalletScreen에서 동전 추가 버튼에 조건 추가, 일부 동전 이미지 파일 삭제

--- a/package.json
+++ b/package.json
@@ -18,7 +18,13 @@
     "test": "jest --watchAll",
     "lint": "expo lint",
     "build:android:prod:apk": "cd android && ENVFILE=.env.prod ./gradlew assembleProdRelease",
-    "build:android:prod:aab": "cd android && ENVFILE=.env.prod ./gradlew bundleProdRelease"
+    "build:android:prod:aab": "cd android && ENVFILE=.env.prod ./gradlew bundleProdRelease",
+    "codepush:dev": "eas update --channel dev --message 'dev update'",
+    "codepush:prod": "eas update --channel prod --message 'prod update'",
+    "create:channel:dev": "eas channel:create dev",
+    "delete:channel:dev": "eas channel:delete dev",
+    "create:channel:prod": "eas channel:create prod",
+    "delete:channel:prod": "eas channel:delete prod"
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
