feat: 앱 환경을 'prod'로 변경 및 프로젝트 버전 업데이트

--- a/app.json
+++ b/app.json
@@ -41,7 +41,7 @@
     "updates": {
       "url": "https://u.expo.dev/ae3c101c-3efe-4214-80a7-26b36db9b8c0",
       "requestHeaders": {
-        "expo-channel-name": "dev"
+        "expo-channel-name": "prod"
       }
     }
   }
