--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,31 @@ app-example
 ios/Config/tmp.xcconfig
 ios/tmp.xcconfig
 android/local.properties
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+dev-debug.log
+# Dependency directories
+# Environment variables
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+# OS specific
+
+# Task files
+# tasks.json
+# tasks/ 
+
+# Taskmaster/MCP/환경변수 보안
+.taskmaster/
+.cursor/mcp.json
+.env 
